tests/negative/neg_pr116_bad_indent_step.safe
package neg_PR116_Bad_Indent_Step

  function broken returns integer
     return 1
